fix align

--- a/css/main.css
+++ b/css/main.css
@@ -108,3 +108,10 @@ body {
     width:40px;
     height:20px;
 }
+
+#img1{
+    float: left;
+}
+#img2{
+    float: right;
+}
